# snake-game-ncurses-c

./: CMakeLists.txt  build.sh  run.sh
include/: snake.h
include/geometry/: point.h
include/render/: screen_render.h
src/: main.c
src/geometry/: point.c
src/render/: screen_render.c
